slidelayout: fix issue with z-index (translate3d with z is ignored unless preserve3d is active on container, which is not supported on IE);

--- a/src/css/layerjs.css
+++ b/src/css/layerjs.css
@@ -15,6 +15,7 @@
   left: 0px;
   width: 0px;
   height: 0px;
+  z-index: 0;
 }
 .nativescroll[data-lj-type='layer'], .nativescroll[lj-type='layer'] {
   position: absolute;
